[tool.poetry]
name = "geokde"
version = "0.1.0"
description = ""
authors = ["Duncan Martyn <duncan.martyn@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
